export interface Comment {
  _id?: string;
  author: string;
  text: string;
  date?: Date;
}
